force-app/main/default/objects/QSF_Audio_Recording__c/QSF_Audio_Recording__c.object-meta.xml
<CustomObject>
    <description>Audio recordings about interactions user/customer</description>
    <label>Audio Recording</label>
    <nameField>
        <displayFormat>REC# {000000000}</displayFormat>
        <label>Audio Recordings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audio Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>