force-app/main/default/objects/QSF_Audio_Recording__c/fields/QSF_Audio_Id__c.field-meta.xml
<CustomField>
    <fullName>QSF_Audio_Id__c</fullName>
    <description>Audio Identifier</description>
    <externalId>true</externalId>
    <label>Audio Identifier</label>
    <length>90</length>
    <required>true</required>
    <type>Text</type>
</CustomField>