force-app/main/default/objects/QSF_Audio_Recording__c/fields/QSF_Interaction__c.field-meta.xml
<CustomField>
    <fullName>QSF_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interaction</label>
    <referenceTo>Interaction__c</referenceTo>
    <relationshipLabel>Audio Recordings</relationshipLabel>
    <relationshipName>Audio_Recordings</relationshipName>
    <type>Lookup</type>
</CustomField>