force-app/main/default/objects/QSF_Audio_Recording__c/fields/QSF_URL_Audio_Recording__c.field-meta.xml
<CustomField>
    <fullName>QSF_URL_Audio_Recording__c</fullName>
    <label>URL Audio Recording</label>
    <required>true</required>
    <type>Url</type>
</CustomField>